--- a/index.html
+++ b/index.html
@@ -6,12 +6,15 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=yes">
         <link rel="stylesheet" href="style.css">
 
+        <!-- Fonts & Icons -->
         <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap" rel="stylesheet">
         <script defer src="https://use.fontawesome.com/releases/v5.13.0/js/all.js" integrity="sha384-ujbKXb9V3HdK7jcWL6kHL1c+2Lj4MR4Gkjl7UtwpSHg/ClpViddK9TI7yU53frPN" crossorigin="anonymous"></script>
 
+        <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
         <link rel="stylesheet" href="css/bootstrap.css">
 
+        <!--MyCustomCSS-->
         <link rel="stylesheet" href="css/custom.css">
 
         <title>Newsweek - News, Analysis, Politics, Business, Technology</title>
@@ -20,7 +23,7 @@
     <body class="m-0 customBody">
         <header class="clearfix ">
 
-            <section class=" p-3 b-0 d-flex flex-wrap align-items-center justify-content-between w-100 customHeader">
+            <div class=" p-3 b-0 d-flex flex-wrap align-items-center justify-content-between w-100 customHeader">
                 <div class="float-left w-25 d-none d-lg-block 
     d-none d-lg-block text-nowrap text-left m-0">
                     <p>
@@ -49,7 +52,7 @@
                 </svg>
                 </a>
                 <a class="ml-auto d-inline d-md-none customSvg">
-                    <img class="customHeader__customLoginIcon" src="https://g.newsweek.com/www/images/user-w.svg" alt="alt">
+                    <img class="customHeader__customLoginIcon" src="https://g.newsweek.com/www/images/user-w.svg">
                 </a>
                 <a class="ml-auto d-none d-md-inline customSvg">LOGIN</a>
                 <button type="button" class="btn-primary rounded-pill mx-2 customButtonSubscribe customHeader__customButtonSubscribe">SUBSCRIBE
@@ -61,7 +64,7 @@
                     </path>
                 </svg>
                 </a>
-            </section>
+            </div>
             <nav class="flex-row justify-content-between d-none d-lg-block bg-white mt-n3 p-3 float-left customLgMenu">
                 <a class="customMenuLink1 p-1 text-center" href="#">U.S.</a>
                 <a class="customMenuLink1 p-1 text-center" href="#">World</a>
@@ -90,7 +93,7 @@
             <section class="col-md-7 col-lg-5 flex-row order-md-2">
                 <h2 class="customSectionTitle">TOP STORY</h2>
                 <article>
-                    <img class="my-2 float-left w-100" src="https://d.newsweek.com/en/full/1609673/anthony-fauci.jpg?w=591&h=364&f=aa4c8a2024f44e8505fe70a791b2a7a6" alt="alt">
+                    <img class="my-2 float-left w-100" src="https://d.newsweek.com/en/full/1609673/anthony-fauci.jpg?w=591&h=364&f=aa4c8a2024f44e8505fe70a791b2a7a6">
                     <div class="float-left mt-n4 w-50 text-decoration-none customCategoryTitleDiv">
                         <a class="customCategoryTitleA" href=" ">HEALTH</a>
                     </div>
@@ -101,15 +104,14 @@
                 </article>
                 <h2 class="customSectionTitle">MY TURN</h2>
                 <section class="w-100 m-0 d-md-flex flex-row justify-content-between align-items-start">
-                    <h2 class="d-none"></h2>
                     <article class="col-md-4 m-1 p-0 d-inline-block">
-                        <img class="w-100 my-1" src="https://picsum.photos/id/1067/600/400" alt="alt">
+                        <img class="w-100 my-1" src="https://picsum.photos/id/1067/600/400" alt="">
                         <h2 class="customText1">Velit Lorem proident incididunt anim mollit md-do occaecat.</h2>
                     </article>
                     <article class="col-md-4 m-1 p-0 d-inline-block">
                         <img class="w-100 my-1" src="https://picsum.photos/id/1067/600/400" alt="">
                         <h2 class="customText1">Dolor adipisicing veniam tempor ullamco amet exercitation adipisicing Lorem magna.
-                        </h2>
+                            </h2>
                     </article>
                     <article class="col-md-4 m-1 p-0 d-inline-block">
                         <img class="w-100 my-1" src="https://picsum.photos/id/431/600/400" alt="alt">
@@ -453,10 +455,10 @@
                             <img class="w-50 ml-n5 mt-2" src="https://d.newsweek.com/en/full/1610195/cover-july-24-2020.jpg?w=170&q=95&f=2ea70c30e8f5467c1e61021ae9778138" alt="alt">
                         </div>
                         <h2 class="my-3 d-none d-md-inline col-md-6 customText1">In-depth Stories That You Don't See Elsewhere About Topics You Want to Read!
-                            <p class="mt-3 customArticleIntro">All Access + Weekly Delivery.<br>Choose A Membership That's Perfect for You!</p>
+                            <span class="mt-3 customArticleIntro">All Access + Weekly Delivery.<br>Choose A Membership That's Perfect for You!</span>
                         </h2>
                         <h2 class="m-auto my-3 d-md-none customText1">WANT TO READ!
-                            <span class="mt-3 customArticleIntro">All Access + Weekly Delivery.<br>Choose A Membership That's Perfect for You!</span>
+                            <p class="mt-3 customArticleIntro">All Access + Weekly Delivery.<br>Choose A Membership That's Perfect for You!</p>
                         </h2>
 
 
@@ -477,7 +479,7 @@
         <footer class="w-100">
             <div class="d-flex flex-wrap w-100 align-items-baseline">
 
-                <svg class="w-100 mx-3 customFooterLogo" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 395.6 60" style="enable-background:new 0 0 395.6 60;" xml:space="preserve">
+                <svg class="w-100 mx-3 customFooterLogo" version="1.1"  xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 395.6 60" style="enable-background:new 0 0 395.6 60;" xml:space="preserve">
                     <g>
                         <path class="customFooterLogo"
                         d="M58.7,10.8h-5.6v48.3H42.8l-25.1-33v22.1h5.6v10.8H0V48.3h5.6V10.8H0V0h17.6L41,30.7V10.8h-5.6V0h23.2	L58.7,10.8L58.7,10.8z M95.8,38c0,0.9,0,1.8-0.1,2.7H70.3c-0.7,8.2,2.4,10.6,7.1,10.6c3.9,0,6.9-2.6,6.9-6.6h11	c-0.3,7.2-4,15.4-18.5,15.4c-14.5,0-21.3-10.5-21.3-22.1c0-10.5,7-21.6,21-21.6C89.9,16.3,95.8,25.6,95.8,38 M159,27.3h-3.7	l-9.4,31.8h-12.5l-5.9-17.4l-5.3,17.4h-12.8L98.8,27.4h-3.7V16.6h22.1v10.7h-5.6l5.8,16.9l7.6-27.6h6.8l9.3,27.6l5-16.9h-5.6V16.6	H159L159,27.3L159,27.3z M174.5,27.8c0,1.5,1.2,2.5,5.4,3.9l6,2c5.5,1.8,12.1,5.9,12.1,13.4c0,8.8-6.6,13-14.7,13	c-6.5,0-11.5-3.2-12.9-4.6V59h-10.8V44.4h10.6c0.3,4.8,4.6,7.3,8.5,7.3c3.2,0,4.7-1.4,4.7-3c0-2-1.2-3.1-6.5-4.8l-5.3-1.8	c-5.4-1.7-11.4-5.7-11.4-12.8c0-8.7,7.7-13.1,14.3-13.1c6.8,0,10.1,1.9,11.8,3.8l0.1-3.3H197v13.3h-11.2c-0.2-3.6-3.7-5.2-7.2-5.2	C175.8,24.8,174.5,26.1,174.5,27.8 M262.8,27.3h-3.7l-9.4,31.8h-12.5l-5.9-17.4L226,59.1h-12.8l-10.6-31.7h-3.7V16.6h22.1v10.7	h-5.6l5.8,16.9l7.6-27.6h6.8l9.3,27.7l5-16.9h-5.6V16.6h18.5V27.3z M302,37.9c0,0.9,0,1.8-0.1,2.7h-25.4	c-0.7,8.2,2.4,10.6,7.1,10.6c3.9,0,6.9-2.6,6.9-6.6h11c-0.3,7.2-4,15.4-18.5,15.4c-14.5,0-21.3-10.5-21.3-22.1	c0-10.5,7-21.6,21-21.6C296.1,16.2,302,25.5,302,37.9 M343.9,37.8c0,0.9,0,1.8-0.1,2.7h-25.4c-0.7,8.2,2.4,10.6,7.1,10.6	c3.9,0,6.9-2.6,6.9-6.6h11c-0.3,7.2-4,15.4-18.5,15.4c-14.5,0-21.3-10.5-21.3-22.1c0-10.5,7-21.6,21-21.6	C338,16.1,343.9,25.4,343.9,37.8 M389.9,59h-12.8l-13.3-17.3l-4.3,3.2v3.4h3.8V59h-19.6V48.3h3.7V10.6h-5.6V0h17.8v33.9l8.9-6.5	h-5.6V16.6h23.9v10.8h-3.7l-9.3,7l10.7,13.9h5.6L389.9,59L389.9,59z M395.6,56.6c0,0.5-0.1,0.9-0.4,1.2c-0.2,0.4-0.5,0.7-0.9,0.9	c-0.4,0.2-0.8,0.4-1.3,0.4c-0.5,0-0.9-0.1-1.2-0.4c-0.4-0.2-0.7-0.5-0.9-0.9c-0.2-0.4-0.4-0.8-0.4-1.2c0-0.5,0.1-0.9,0.4-1.2	c0.2-0.4,0.5-0.7,0.9-0.9c0.4-0.2,0.8-0.4,1.2-0.4c0.5,0,0.9,0.1,1.3,0.4c0.4,0.2,0.7,0.5,0.9,0.9	C395.5,55.8,395.6,56.2,395.6,56.6 M394.6,58c0.4-0.4,0.6-0.9,0.6-1.4c0-0.6-0.2-1-0.6-1.4s-0.9-0.6-1.4-0.6s-1,0.2-1.4,0.6	c-0.4,0.4-0.6,0.9-0.6,1.4c0,0.6,0.2,1,0.6,1.4c0.4,0.4,0.9,0.6,1.4,0.6S394.2,58.4,394.6,58 M393.6,56.8c0.1,0.1,0.2,0.1,0.2,0.1	c0.1,0.1,0.2,0.2,0.2,0.3c0,0,0.2,0.3,0.4,0.8h-0.8c-0.3-0.5-0.4-0.8-0.5-0.9c-0.1-0.1-0.2-0.2-0.3-0.2c0,0-0.1,0-0.1,0v1.1h-0.6	v-2.6h1.2c0.4,0,0.6,0.1,0.7,0.2c0.2,0.2,0.2,0.3,0.2,0.6c0,0.2-0.1,0.4-0.2,0.5C393.9,56.6,393.8,56.7,393.6,56.8 M393.5,56.3	c0.1-0.1,0.1-0.2,0.1-0.3s-0.1-0.2-0.1-0.3c-0.1-0.1-0.2-0.1-0.4-0.1h-0.3v0.7h0.3C393.3,56.4,393.4,56.4,393.5,56.3 M318.4,33.5	h13.9c0-6-3.9-8.4-6.8-8.4C322.1,25.2,318.6,27.9,318.4,33.5 M276.5,33.6h13.9c0-6-3.9-8.4-6.8-8.4C280.3,25.2,276.8,28,276.5,33.6 M70.3,33.7h13.9c0-6-3.9-8.4-6.8-8.4C74.1,25.3,70.6,28.1,70.3,33.7">
