--- a/index.html
+++ b/index.html
@@ -167,9 +167,7 @@
             src="https://d.newsweek.com/en/full/1609673/anthony-fauci.jpg?w=591&h=364&f=aa4c8a2024f44e8505fe70a791b2a7a6"
             alt="owieruj"
           />
-          <div
-            class="float-left mt-n4 w-50 text-decoration-none customCategoryTitleDiv"
-          >
+          <div class="float-left text-decoration-none customCategoryTitleDiv">
             <a class="customCategoryTitleA" href=" ">HEALTH</a>
           </div>
           <h3 class="customArticleTitle">
@@ -187,10 +185,10 @@
           </p>
         </article>
 
+        <h2 class="w-100 customSectionTitle">MY TURN</h2>
         <section
           class="w-100 m-0 d-md-flex flex-row justify-content-between align-items-start"
         >
-          <h2 class="customSectionTitle">MY TURN</h2>
           <article class="col-md-4 m-1 p-0 d-inline-block">
             <img
               class="w-100 my-1"
@@ -224,10 +222,10 @@
           </article>
         </section>
 
+        <h2 class="customSectionTitle">CULTURE & TRAVEL</h2>
         <section
           class="w-100 m-0 d-md-flex flex-row justify-content-between align-items-start"
         >
-          <h2 class="customSectionTitle">CULTURE & TRAVEL</h2>
           <article class="col-md-4 m-1 p-0 d-inline-block">
             <img
               class="w-100 my-1"
@@ -480,9 +478,7 @@
             src="https://d.newsweek.com/en/full/1610047/twitter-jack-dorsey.jpg?w=397&h=265&q=90&f=468a6295471b6fcfd45e5e59d2728b42"
             alt="sdfwerfdf"
           />
-          <div
-            class="float-left mt-n4 w-50 text-decoration-none customCategoryTitleDiv"
-          >
+          <div class="float-left text-decoration-none customCategoryTitleDiv">
             <a class="customCategoryTitleA" href=" ">TECH & SCIENCE</a>
           </div>
           <h3 class="customArticleTitle">
@@ -506,9 +502,7 @@
             src="https://d.newsweek.com/en/full/1610047/twitter-jack-dorsey.jpg?w=397&h=265&q=90&f=468a6295471b6fcfd45e5e59d2728b42"
             alt="sdfwerfdf"
           />
-          <div
-            class="float-left mt-n4 w-50 text-decoration-none customCategoryTitleDiv"
-          >
+          <div class="float-left text-decoration-none customCategoryTitleDiv">
             <a class="customCategoryTitleA" href=" ">TECH & SCIENCE</a>
           </div>
           <h3 class="customArticleTitle">
@@ -531,9 +525,7 @@
             src="https://d.newsweek.com/en/full/1610070/china-us-economy-recovery-coronavirus-recession-growth.jpg?w=397&h=265&q=90&f=3c6a809299a855627083619c27c3c60b"
             alt="sdfwerfdf"
           />
-          <div
-            class="float-left mt-n4 w-50 text-decoration-none customCategoryTitleDiv"
-          >
+          <div class="float-left text-decoration-none customCategoryTitleDiv">
             <a class="customCategoryTitleA" href=" ">TECH & SCIENCE</a>
           </div>
           <h3 class="customArticleTitle">
@@ -551,9 +543,7 @@
             src="https://d.newsweek.com/en/full/1610047/twitter-jack-dorsey.jpg?w=397&h=265&q=90&f=468a6295471b6fcfd45e5e59d2728b42"
             alt="sdfwerfdf"
           />
-          <div
-            class="float-left mt-n4 w-50 text-decoration-none customCategoryTitleDiv"
-          >
+          <div class="float-left text-decoration-none customCategoryTitleDiv">
             <a class="customCategoryTitleA" href=" ">TECH & SCIENCE</a>
           </div>
           <h3 class="customArticleTitle">
@@ -579,9 +569,7 @@
             src="https://d.newsweek.com/en/full/1610047/twitter-jack-dorsey.jpg?w=397&h=265&q=90&f=468a6295471b6fcfd45e5e59d2728b42"
             alt="sdfwerfdf"
           />
-          <div
-            class="float-left mt-n4 w-50 text-decoration-none customCategoryTitleDiv"
-          >
+          <div class="float-left text-decoration-none customCategoryTitleDiv">
             <a class="customCategoryTitleA" href=" ">TECH & SCIENCE</a>
           </div>
           <h3 class="customArticleTitle">
@@ -604,9 +592,7 @@
             src="https://d.newsweek.com/en/full/1610070/china-us-economy-recovery-coronavirus-recession-growth.jpg?w=397&h=265&q=90&f=3c6a809299a855627083619c27c3c60b"
             alt="sdfwerfdf"
           />
-          <div
-            class="float-left mt-n4 w-50 text-decoration-none customCategoryTitleDiv"
-          >
+          <div class="float-left text-decoration-none customCategoryTitleDiv">
             <a class="customCategoryTitleA" href=" ">TECH & SCIENCE</a>
           </div>
           <h3 class="customArticleTitle">
@@ -767,9 +753,7 @@
             src="https://d.newsweek.com/en/full/1587568/infection-prevention-products-banner.jpg?w=500&h=333&f=c96d696a017681c45d2f464a2ae0e23d"
             alt="aldfgdfgdt"
           />
-          <div
-            class="float-left mt-n5 w-50 text-decoration-none customCategoryTitleDiv"
-          >
+          <div class="float-left text-decoration-none customCategoryTitleDiv">
             <a class="customCategoryTitleA" href=" ">RANKINGS</a>
           </div>
           <h2
@@ -798,10 +782,10 @@
           src="https://g.newsweek.com/www/images/logo-n1.svg"
           alt="sdfsdf"
         />
+        <h2 class="m-0 d-inline customText1">IN THE MAGAZINE</h2>
       </div>
       <section class="w-100 order-5 p-0 d-flex flex-wrap">
-        <h2 class="m-0 d-inline customText1">IN THE MAGAZINE</h2>
-        <article class="col-md-3 mx-0 p-1">
+        <article class="col-md-6 col-lg-3 mx-0 p-1">
           <img
             class="w-100"
             src="https://d.newsweek.com/en/full/1610195/cover-july-24-2020.jpg?w=360&h=480&q=90&f=081678b318d01f44507b435d6f51963c"
@@ -812,7 +796,7 @@
             <h2 class="text-center my-2 customText1">SEE ALL FEATURES ></h2>
           </a>
         </article>
-        <article class="col-md-3 mx-0 p-1">
+        <article class="col-md-6 col-lg-3 mx-0 p-1">
           <img
             class="w-100 mb-2"
             src="https://d.newsweek.com/en/full/1610210/fea-secondwave.jpg?w=466&h=311&l=51&t=44&q=90&f=63abb2f7ed334c51fb997e04c688737b"
@@ -827,7 +811,7 @@
             Patients
           </h2>
         </article>
-        <article class="col-md-3 mx-0 p-1">
+        <article class="col-md-6 col-lg-3 mx-0 p-1">
           <img
             class="w-100 mb-2"
             src="https://d.newsweek.com/en/full/1610210/fea-secondwave.jpg?w=466&h=311&l=51&t=44&q=90&f=63abb2f7ed334c51fb997e04c688737b"
@@ -842,7 +826,7 @@
             Patients
           </h2>
         </article>
-        <article class="col-md-3 mx-0 p-1">
+        <article class="col-md-6 col-lg-3 mx-0 p-1">
           <img
             class="w-100 mb-2"
             src="https://d.newsweek.com/en/full/1610210/fea-secondwave.jpg?w=466&h=311&l=51&t=44&q=90&f=63abb2f7ed334c51fb997e04c688737b"
@@ -857,7 +841,7 @@
             Patients
           </h2>
         </article>
-        <article class="col-md-3 mx-0 p-1">
+        <article class="col-md-6 col-lg-3 mx-0 p-1">
           <img
             class="w-100 mb-2"
             src="https://d.newsweek.com/en/full/1610210/fea-secondwave.jpg?w=466&h=311&l=51&t=44&q=90&f=63abb2f7ed334c51fb997e04c688737b"
@@ -872,7 +856,7 @@
             Patients
           </h2>
         </article>
-        <article class="col-md-3 mx-0 p-1">
+        <article class="col-md-6 col-lg-3 mx-0 p-1">
           <img
             class="w-100 mb-2"
             src="https://d.newsweek.com/en/full/1610210/fea-secondwave.jpg?w=466&h=311&l=51&t=44&q=90&f=63abb2f7ed334c51fb997e04c688737b"
@@ -887,7 +871,7 @@
             Patients
           </h2>
         </article>
-        <article class="col-md-3 mx-0 p-1">
+        <article class="col-md-6 col-lg-3 mx-0 p-1">
           <img
             class="w-100 mb-2"
             src="https://d.newsweek.com/en/full/1610210/fea-secondwave.jpg?w=466&h=311&l=51&t=44&q=90&f=63abb2f7ed334c51fb997e04c688737b"
@@ -902,7 +886,7 @@
             Patients
           </h2>
         </article>
-        <article class="col-md-3 mx-0 p-1">
+        <article class="col-md-6 col-lg-3 mx-0 p-1">
           <img
             class="w-100 mb-2"
             src="https://d.newsweek.com/en/full/1610210/fea-secondwave.jpg?w=466&h=311&l=51&t=44&q=90&f=63abb2f7ed334c51fb997e04c688737b"
@@ -926,11 +910,11 @@
           src="https://g.newsweek.com/www/images/logo-n1.svg"
           alt="gergerg"
         />
+        <h2 class="m-0 d-inline customText1">EDITOR'S PICKS</h2>
       </div>
 
       <section class="w-100 order-7 p-0 d-flex flex-wrap">
-        <h2 class="m-0 d-inline customText1">EDITOR'S PICKS</h2>
-        <article class="col-md-3 mx-0 p-1">
+        <article class="col-md-6 col-lg-3 mx-0 p-1">
           <img
             class="w-100 mb-2"
             src="https://d.newsweek.com/en/full/1610210/fea-secondwave.jpg?w=466&h=311&l=51&t=44&q=90&f=63abb2f7ed334c51fb997e04c688737b"
@@ -946,7 +930,7 @@
             enim consectetur do anim. Cillum aliquip do nostrud velit.
           </p>
         </article>
-        <article class="col-md-3 mx-0 p-1">
+        <article class="col-md-6 col-lg-3 mx-0 p-1">
           <img
             class="w-100 mb-2"
             src="https://d.newsweek.com/en/full/1610210/fea-secondwave.jpg?w=466&h=311&l=51&t=44&q=90&f=63abb2f7ed334c51fb997e04c688737b"
@@ -962,7 +946,7 @@
             enim consectetur do anim. Cillum aliquip do nostrud velit.
           </p>
         </article>
-        <article class="col-md-3 mx-0 p-1">
+        <article class="col-md-6 col-lg-3 mx-0 p-1">
           <img
             class="w-100 mb-2"
             src="https://d.newsweek.com/en/full/1610210/fea-secondwave.jpg?w=466&h=311&l=51&t=44&q=90&f=63abb2f7ed334c51fb997e04c688737b"
@@ -978,7 +962,7 @@
             enim consectetur do anim. Cillum aliquip do nostrud velit.
           </p>
         </article>
-        <article class="col-md-3 mx-0 p-1">
+        <article class="col-md-6 col-lg-3 mx-0 p-1">
           <img
             class="w-100 mb-2"
             src="https://d.newsweek.com/en/full/1610210/fea-secondwave.jpg?w=466&h=311&l=51&t=44&q=90&f=63abb2f7ed334c51fb997e04c688737b"
@@ -994,7 +978,7 @@
             enim consectetur do anim. Cillum aliquip do nostrud velit.
           </p>
         </article>
-        <article class="col-md-3 mx-0 p-1">
+        <article class="col-md-6 col-lg-3 mx-0 p-1">
           <img
             class="w-100 mb-2"
             src="https://d.newsweek.com/en/full/1610210/fea-secondwave.jpg?w=466&h=311&l=51&t=44&q=90&f=63abb2f7ed334c51fb997e04c688737b"
@@ -1010,7 +994,7 @@
             enim consectetur do anim. Cillum aliquip do nostrud velit.
           </p>
         </article>
-        <article class="col-md-3 mx-0 p-1">
+        <article class="col-md-6 col-lg-3 mx-0 p-1">
           <img
             class="w-100 mb-2"
             src="https://d.newsweek.com/en/full/1610210/fea-secondwave.jpg?w=466&h=311&l=51&t=44&q=90&f=63abb2f7ed334c51fb997e04c688737b"
@@ -1026,7 +1010,7 @@
             enim consectetur do anim. Cillum aliquip do nostrud velit.
           </p>
         </article>
-        <article class="col-md-3 mx-0 p-1">
+        <article class="col-md-6 col-lg-3 mx-0 p-1">
           <img
             class="w-100 mb-2"
             src="https://d.newsweek.com/en/full/1610210/fea-secondwave.jpg?w=466&h=311&l=51&t=44&q=90&f=63abb2f7ed334c51fb997e04c688737b"
@@ -1042,7 +1026,7 @@
             enim consectetur do anim. Cillum aliquip do nostrud velit.
           </p>
         </article>
-        <article class="col-md-3 mx-0 p-1">
+        <article class="col-md-6 col-lg-3 mx-0 p-1">
           <img
             class="w-100 mb-2"
             src="https://d.newsweek.com/en/full/1610210/fea-secondwave.jpg?w=466&h=311&l=51&t=44&q=90&f=63abb2f7ed334c51fb997e04c688737b"
@@ -1140,7 +1124,7 @@
         </svg>
         <h2 class="m-3 mr-auto customFooterCopyright">© 2020 Newsweek</h2>
         <nav
-          class="col-sm-8 col-md-3 ml-auto mr-3 d-flex justify-content-between m-3"
+          class="col-sm-6 col-md-3 pr-5 ml-auto mr-3 d-flex justify-content-between m-3"
         >
           <img class="customSocialIcon" src="images/iconFace.png" alt="alt" />
           <img
@@ -1157,9 +1141,11 @@
           />
         </nav>
       </div>
-      <p class="d-inline-block float-left ml-3 h-auto customText4">Editions:</p>
+      <p class="d-inline-block float-left pl-3 h-auto w-25 customText4">
+        Editions:
+      </p>
       <ul
-        class="list-unstyled text-left float-left customText4 font-weight-normal mb-0 ml-3 clearfix"
+        class="list-unstyled w-75 d-inline text-left float-left customText4 font-weight-normal mb-0 pl-3 clearfix"
       >
         <li class="list-inline-item">U.S. Edition</li>
         <li class="list-inline-item">日本</li>
