--- a/index.html
+++ b/index.html
@@ -129,9 +129,9 @@
         </a>
       </div>
       <nav
-        class="flex-row justify-content-between d-none d-lg-block bg-white mt-n3 p-3 float-left customLgMenu"
+        class="d-flex flex-row justify-content-between d-none d-lg-flex bg-white mt-n3 pl-0 py-3 float-left customLgMenu"
       >
-        <a class="customMenuLink1 p-1 text-center" href="#">U.S.</a>
+        <a class="customMenuLink1 pl-0 p-1 ml-0 text-center" href="#">U.S.</a>
         <a class="customMenuLink1 p-1 text-center" href="#">World</a>
         <a class="customMenuLink1 p-1 text-center" href="#">Business</a>
         <a class="customMenuLink1 p-1 text-center" href="#">Tech & Science</a>
@@ -149,13 +149,13 @@
         />
       </nav>
       <ul
-        class="w-75 list-unstyled d-none d-lg-flex justify-content-around pl-3 customSectionTitle"
+        class="w-100 list-unstyled d-none d-lg-flex justify-content-start customSectionTitle"
       >
-        <li><a class="customSectionTitle" href="#">TRENDING</a></li>
-        <li><a class="customSectionTitle" href="#">DONALD TRUMP</a></li>
-        <li><a class="customSectionTitle" href="#">JOE BIDEN</a></li>
-        <li><a class="customSectionTitle" href="#">CORONAVIRUS</a></li>
-        <li><a class="customSectionTitle" href="#">2020 ELECTION</a></li>
+        <li><a class="px-4 customSectionTitle" href="#">TRENDING</a></li>
+        <li><a class="px-4 customSectionTitle" href="#">DONALD TRUMP</a></li>
+        <li><a class="px-4 customSectionTitle" href="#">JOE BIDEN</a></li>
+        <li><a class="px-4 customSectionTitle" href="#">CORONAVIRUS</a></li>
+        <li><a class="px-4 customSectionTitle" href="#">2020 ELECTION</a></li>
       </ul>
     </header>
     <main class="mx-auto row p-3 flex-wrap justify-content-around customMain">
@@ -1045,7 +1045,7 @@
       </section>
       <section class="w-100 order-8 p-0 d-flex flex-wrap">
         <h3 class="customText3">SUBSCRIBE</h3>
-        <article class="col-sm-12 col-lg-7">
+        <article class="col-sm-12 col-lg-6">
           <div class="m-3 p-0 d-flex justify-content-around flex-wrap">
             <div class="col-md-6">
               <img
@@ -1067,8 +1067,16 @@
                 Perfect for You!</span
               >
             </h2>
-            <h2 class="m-auto my-3 d-md-none customText1">WANT TO READ!</h2>
-            <p class="mt-3 customArticleIntro">
+            <h2 class="m-auto my-3 d-md-none customText1">Want to Read!</h2>
+            <h2
+              class="my-3 d-md-none font-weight-normal text-center col-md-6 customText1"
+            >
+              <span class="mt-3 customArticleIntro"
+                >All Access + Weekly Delivery.<br />Choose A Membership That's
+                Perfect for You!</span
+              >
+            </h2>
+            <p class="d-none mt-3 customArticleIntro">
               All Access + Weekly Delivery.<br />Choose A Membership That's
               Perfect for You!
             </p>
@@ -1124,7 +1132,7 @@
         </svg>
         <h2 class="m-3 mr-auto customFooterCopyright">© 2020 Newsweek</h2>
         <nav
-          class="col-sm-6 col-md-3 pr-5 ml-auto mr-3 d-flex justify-content-between m-3"
+          class="col-sm-6 col-md-3 pr-5 ml-auto mr-3 d-flex justify-content-between m-3 customFooterSocialNav"
         >
           <img class="customSocialIcon" src="images/iconFace.png" alt="alt" />
           <img
@@ -1141,7 +1149,7 @@
           />
         </nav>
       </div>
-      <p class="d-inline-block float-left pl-3 h-auto w-25 customText4">
+      <p class="d-inline-block float-left pl-3 h-auto customText4">
         Editions:
       </p>
       <ul
