Changes required by Expedito done / Only missing "U.S." section

--- a/index.html
+++ b/index.html
@@ -43,15 +43,15 @@
         <div
           class="float-left w-25 d-none d-lg-block d-none d-lg-block text-nowrap text-left m-0"
         >
-          <p>
+          <p class="mb-0">
             <img
-              class="w-25 p-2"
+              class="p-0 p-2 customCloudImg"
               src="https://g.newsweek.com/img/weather/26.png"
               alt="alt"
             />
             18ºC, Angra dos Reis
           </p>
-          <p>
+          <p class="mb-3 py-0 my-0">
             Wed, Jul 15, 2020
           </p>
         </div>
@@ -115,7 +115,7 @@
         >
           SUBSCRIBE >
         </button>
-        <a class="">
+        <a class="d-lg-none">
           <svg
             class="svg-inline--fa fa-bars fa-w-14 customSvg"
             xmlns="http://www.w3.org/2000/svg"
@@ -880,8 +880,13 @@
                 Perfect for You!
               </p>
             </div>
+            <button type="button" class="customLinkSubscribe">
+              SUBSCRIBE
+            </button>
           </article>
-          <article class="col-sm-12 col-lg-5 d-flex flex-wrap">
+          <article
+            class="col-sm-12 col-lg-5 d-flex flex-wrap border border-secondary py-3"
+          >
             <h3 class="w-100 customText3">NEWSLETTER</h3>
             <img
               class="d-none d-md-block col-md-5 h-auto"
@@ -1789,16 +1794,21 @@
                 All Access + Weekly Delivery.<br />Choose A Membership That's
                 Perfect for You!
               </p>
+              <button type="button" class="customLinkSubscribe">
+                SUBSCRIBE
+              </button>
             </div>
           </article>
-          <article class="col-sm-12 col-lg-5 d-flex flex-wrap">
+          <article
+            class="col-sm-12 col-lg-5 d-flex flex-wrap border border-light"
+          >
             <h3 class="w-100 customText3">NEWSLETTER</h3>
             <img
               class="d-none d-md-block col-md-5 h-auto"
               src="https://d.newsweek.com/en/full/1541302/starting5-homepage.png?w=397&h=265&q=90&f=742bce9a6f72dd8f19ba2e7fd5db06e5"
               alt="agfhjghjklt"
             />
-            <div class="col-sm-12 col-md-7">
+            <div class="col-sm-12 col-md-7 border border-secondary py-3">
               <h2 class="text-center m-auto my-3 customText1">
                 The Starting 5
               </h2>
@@ -1820,6 +1830,9 @@
             </div>
           </article>
         </section>
+        <div id="us">
+          
+        </div>
       </div>
     </main>
     <footer class="w-100">
